# wave-function-collapse

./: .gitignore  data.csv  pyproject.toml  simple.csv  test.py  wave-function-collapse.ipynb  wave-function-collapse.py
data/: hard.csv
notebooks/: wave-function-collapse.ipynb
src/wave_function_collapse/: wave-function-collapse.py
wave_function_collapse/: sudoku_wave.py  wave.py
