[project]
name = "wave-function-collapse"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniele Pira", email = "pira.daniele@gmail.com"},
]
dependencies = [
    "scipy>=1.13.1",
    "numpy>=1.26.4",
    "jupyterlab>=4.2.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
